Fixed nav-header z-index issue

--- a/style.css
+++ b/style.css
@@ -16,10 +16,11 @@ body {
 }
 
 .nav-header {
-  min-height: 10vh;
-  width: 80%;
+  position: fixed;
+  color: aliceblue;
+  width: 100%;
   margin: auto;
-  padding: 2rem 0rem;
+  padding: 4rem 15rem;
   font-size: 1rem;
   display: flex;
   align-items: center;
@@ -45,7 +46,6 @@ body {
   justify-content: space-between;
   color: white;
   background: #17181a;
-  
 }
 
 .hero-desc {
@@ -72,7 +72,6 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  
 }
 
 .span1 {
@@ -118,8 +117,8 @@ body {
   height: 100%;
   top: 0%;
   bottom: 0%;
-  z-index: 1;
   opacity: 1;
+  z-index: 1;
   clip-path: circle(50px at 100% -10%);
   -webkit-clip-path: circle(50px at 100% -10%);
 }
@@ -153,7 +152,6 @@ body {
   height: 110%;
   top: -10%;
   left: 0;
-
 }
 
 .cursor {
@@ -168,30 +166,33 @@ body {
   transition-property: background, transform;
   transform-origin: 75% 75%;
 }
-.cursor.activeHover{
-  
+.cursor.activeHover {
   background: rgb(117, 152, 216);
-  transform: scale(3);
+  transform: scale(2);
 }
-.cursor.activeExp{
+
+.cursor.activeExp {
   background: white;
   transform: scale(3);
 }
+
 .scrollmagic-pin-spacer {
   position: static !important;
 }
-.cursor-text{
+
+.cursor-text {
   position: absolute;
   font-size: 0.6rem;
   top: 40%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
-.title{
+
+.title {
   position: relative;
   overflow: hidden;
-
 }
+
 .title-swipe {
   width: 100%;
   height: 100%;
@@ -200,12 +201,19 @@ body {
   mix-blend-mode: darken;
   transform: translateY(100%);
 }
-.t-swipe1{
+
+.t-swipe1 {
   background-color: rgb(192, 98, 74);
 }
-.t-swipe2{
+
+.t-swipe2 {
   background-color: rgb(238, 173, 98);
 }
-.t-swipe3{
+
+.t-swipe3 {
   background-color: rgb(202, 194, 79);
+}
+
+body .hide {
+  overflow: hidden;
 }
